<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_doa_facil"
    tools:context=".View.cadastro">

    <View
        android:id="@+id/background_cadastro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8F000000"
        />

    <TextView
        android:id="@+id/txt_cadastro"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txt_titulo_cadastro"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_razao"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_razao"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_razao_social"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_nome_fantasia"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_nome_fantasia"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_nome_fantasia"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_cnpj"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_cnpj"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_cnpj"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_logradouro"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_cel"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_contato_cel"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_logradouro"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_logradouro"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_logradouro"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_cep"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_numero_imovel"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_numero_imovel"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_cidade"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_cep"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_cep"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_bairro"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_cidade"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_cidade"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_complemento"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_bairro"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_bairro"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_complemento"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_complemento"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/txt_Complemento"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_cad_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_email"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edit_password"
        android:hint="@string/txt_cad_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cad_cancelar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_cad_password"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edit_password"
        android:hint="@string/txt_cad_senha"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cad_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cad_salvar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_margin="14dp"
        android:background="@drawable/bg_btn_organizacao"
        android:text="@string/btn_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_atelie"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cad_cancelar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_margin="14dp"
        android:background="@drawable/bg_btn_sair"
        android:text="@string/btn_cancelar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_atelie"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_atelie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_roda_pe"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>