<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_doa_facil"
    tools:context=".View.Tela_Criar_Campanha">

    <View
        android:id="@+id/background_Inicial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8F000000"/>


    <TextView
        android:id="@+id/txt_criar_campanha"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="10sp"
        android:text="@string/txt_titulo_criar_campanha"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txt_info_meta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:text="@string/txt_info_meta"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txt_criar_campanha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_meta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="30sp"
        android:text="@string/txt_valor_meta"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_info_meta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_valor_meta"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_valor_meta"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10sp"
        android:hint="@string/txt_moeda"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_info_meta"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/txt_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="18sp"
        android:layout_marginEnd="18sp"
        android:text="@string/txt_descricao"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txt_meta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_edit_descricao"
        android:hint="@string/txt_descr"
        android:maxLines="5"
        android:minHeight="48dp"
        android:padding="8sp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Ccamp_cancelar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/btn_cancelar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/bg_btn_sair"
        app:layout_constraintTop_toBottomOf="@+id/edit_descricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_atelie"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Ccamp_salvar"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/btn_salvar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/bg_btn_organizacao"
        app:layout_constraintTop_toBottomOf="@+id/edit_descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txt_atelie"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_atelie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_roda_pe"
        android:textAlignment="center"
        android:textColor="#9FA8DA"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>