<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_itens_lista_camp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10sp"
    android:layout_margin="05dp"
    >

    <TextView
        android:id="@+id/txt_meta_lista_camp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_meta_lista_camp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txt_data_lista_camp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_periodo_lista_camp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="05dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/linha_separadora_lista_camp"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/bg_btn_organizacao"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_meta_lista_camp"
        />

    <TextView
        android:id="@+id/txt_arrec_lista_camp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_arrecadacao_camp_doadores"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginTop="05dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linha_separadora_lista_camp"
        />

    <TextView
        android:id="@+id/txt_total_doadores_lista_camp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_doadores_camp_doacao"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="05dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linha_separadora_lista_camp"
        />

    <TextView
        android:id="@+id/txt_descricao_list_camp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_descricao_camp_doadores"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="5sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_total_doadores_lista_camp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/txt_hist_descricao_list_camp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="05dp"
        android:background="@drawable/bg_hist_list_camp"
        android:hint="@string/txt_hist_descricao_camp_doadores"
        android:maxLines="3"
        android:padding="5sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao_list_camp"
        tools:ignore="TextContrastCheck"
        />

    <View
        android:id="@+id/linha_separadora_botoes"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/bg_btn_doador"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_hist_descricao_list_camp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ver_camp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_btn_doador"
        android:text="@string/btn_ver_camp"
        android:textColor="@color/white"
        android:layout_margin="10sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linha_separadora_botoes"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_imprimir_lista_camp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_btn_organizacao"
        android:text="@string/btn_imprimir_lista_camp"
        android:textColor="@color/white"
        android:layout_margin="10sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_camp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sair_lista"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_btn_sair"
        android:text="@string/btn_sair_lista_camp"
        android:textColor="@color/white"
        android:layout_margin="10sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_imprimir_lista_camp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>