<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_doa_facil"
    tools:context=".View.forgot_password">

    <View
        android:id="@+id/background_forgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8F000000"/>

    <TextView
        android:id="@+id/txt_login"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/txt_tit_rec_acesso"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="26dp"
        android:hint="@string/txt_new_password"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/edit_new_password"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="46dp"
        android:hint="@string/repita_new_password"
        android:drawableEnd="@drawable/ic_eye"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_password"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_redefinir"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_redefinir"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/bg_btn_organizacao"
        android:text="@string/btn_redefinir_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/txt_atelie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_atelie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_roda_pe"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>